// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`infoTable > should not add empty h2 with header set to true 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_large__1s4jotsa styles__1mv9gt40 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-disabled="false"
    >
      <div
        class="styles__1mv9gt41"
        data-disabled="false"
        data-is-active="false"
      >
        <dl
          class="styles__1s4jots1"
        >
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
            style="--ivy5ld0: repeat(3, 1fr); --ivy5ld1: repeat(3, 1fr); --ivy5ld2: repeat(3, 1fr); --ivy5ld3: repeat(3, 1fr); --ivy5ld4: repeat(3, 1fr); --ivy5ld5: repeat(3, 1fr); --_1s4jots0: 100%;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              style="--_1o893js0: 100%; --_1o893js2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              style="--_1o893js0: 100%; --_1o893js2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              style="--_1o893js0: 100%; --_1o893js2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cell
              </dd>
            </div>
          </div>
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
            style="--ivy5ld0: 2fr 1fr; --ivy5ld1: 2fr 1fr; --ivy5ld2: 2fr 1fr; --ivy5ld3: 2fr 1fr; --ivy5ld4: 2fr 1fr; --ivy5ld5: 2fr 1fr; --_1s4jots0: 100%;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              style="--_1o893js0: 100%; --_1o893js2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cell with more text
              </dd>
            </div>
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              style="--_1o893js0: 100%; --_1o893js2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cell
              </dd>
            </div>
          </div>
        </dl>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should render correctly small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__1s4jots1"
    >
      <div
        class="styles__1s4jots2 styles_size_small__1s4jots3 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: repeat(3, 1fr); --ivy5ld1: repeat(3, 1fr); --ivy5ld2: repeat(3, 1fr); --ivy5ld3: repeat(3, 1fr); --ivy5ld4: repeat(3, 1fr); --ivy5ld5: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_small__1s4jots3 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: 2fr 1fr; --ivy5ld1: 2fr 1fr; --ivy5ld2: 2fr 1fr; --ivy5ld3: 2fr 1fr; --ivy5ld4: 2fr 1fr; --ivy5ld5: 2fr 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell with more text
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should render correctly with a header 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_large__1s4jotsa styles__1mv9gt40 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-disabled="false"
    >
      <h2
        class="style__1yhcak80 style_prominence_strong__1yhcak85 style_sentiment_neutral__1yhcak8b style_variant_heading__1yhcak811 style_undefined_compound_1__1yhcak81b style_undefined_compound_65__1yhcak833"
      >
        Header
      </h2>
      <div
        class="styles__1mv9gt41"
        data-disabled="false"
        data-is-active="false"
      >
        <dl
          class="styles__1s4jots1"
        >
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
            style="--ivy5ld0: repeat(3, 1fr); --ivy5ld1: repeat(3, 1fr); --ivy5ld2: repeat(3, 1fr); --ivy5ld3: repeat(3, 1fr); --ivy5ld4: repeat(3, 1fr); --ivy5ld5: repeat(3, 1fr); --_1s4jots0: 100%;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              style="--_1o893js0: 100%; --_1o893js2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              style="--_1o893js0: 100%; --_1o893js2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              style="--_1o893js0: 100%; --_1o893js2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cell
              </dd>
            </div>
          </div>
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
            style="--ivy5ld0: 2fr 1fr; --ivy5ld1: 2fr 1fr; --ivy5ld2: 2fr 1fr; --ivy5ld3: 2fr 1fr; --ivy5ld4: 2fr 1fr; --ivy5ld5: 2fr 1fr; --_1s4jots0: 100%;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              style="--_1o893js0: 100%; --_1o893js2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cell with more text
              </dd>
            </div>
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              style="--_1o893js0: 100%; --_1o893js2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cell
              </dd>
            </div>
          </div>
        </dl>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should render correctly with complex header 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_large__1s4jotsa styles__1mv9gt40 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-disabled="false"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        style="--_1o893js0: 100%;"
      >
        <h2
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_heading__1yhcak811 style_undefined_compound_0__1yhcak81a"
        >
          header
        </h2>
        <button
          class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_medium__1x0t66mf styles_variant_filled__1x0t66mi styles_undefined_compound_6__1x0t66mr"
          type="button"
        >
          Click
        </button>
      </div>
      <div
        class="styles__1mv9gt41"
        data-disabled="false"
        data-is-active="false"
      >
        <dl
          class="styles__1s4jots1"
        >
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
            style="--ivy5ld0: repeat(3, 1fr); --ivy5ld1: repeat(3, 1fr); --ivy5ld2: repeat(3, 1fr); --ivy5ld3: repeat(3, 1fr); --ivy5ld4: repeat(3, 1fr); --ivy5ld5: repeat(3, 1fr); --_1s4jots0: 100%;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              style="--_1o893js0: 100%; --_1o893js2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              style="--_1o893js0: 100%; --_1o893js2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              style="--_1o893js0: 100%; --_1o893js2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cell
              </dd>
            </div>
          </div>
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
            style="--ivy5ld0: 2fr 1fr; --ivy5ld1: 2fr 1fr; --ivy5ld2: 2fr 1fr; --ivy5ld3: 2fr 1fr; --ivy5ld4: 2fr 1fr; --ivy5ld5: 2fr 1fr; --_1s4jots0: 100%;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              style="--_1o893js0: 100%; --_1o893js2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cell with more text
              </dd>
            </div>
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              style="--_1o893js0: 100%; --_1o893js2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cell
              </dd>
            </div>
          </div>
        </dl>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with CellWithCopybutton 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__1s4jots1"
    >
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: repeat(3, 1fr); --ivy5ld1: repeat(3, 1fr); --ivy5ld2: repeat(3, 1fr); --ivy5ld3: repeat(3, 1fr); --ivy5ld4: repeat(3, 1fr); --ivy5ld5: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: 2fr 1fr; --ivy5ld1: 2fr 1fr; --ivy5ld2: 2fr 1fr; --ivy5ld3: 2fr 1fr; --ivy5ld4: 2fr 1fr; --ivy5ld5: 2fr 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell with more text
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: 1fr; --ivy5ld1: 1fr; --ivy5ld2: 1fr; --ivy5ld3: 1fr; --ivy5ld4: 1fr; --ivy5ld5: 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: repeat(3, 1fr); --ivy5ld1: repeat(3, 1fr); --ivy5ld2: repeat(3, 1fr); --ivy5ld3: repeat(3, 1fr); --ivy5ld4: repeat(3, 1fr); --ivy5ld5: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 styles__1s4jots7 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            <div
              class="styles__78oem50 styles_alignItems_center_xxsmall__78oem5d styles_gap_0.5rem_xxsmall__78oem52j"
              style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
            >
              <p
                class="style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style__1yhcak83e"
              >
                a content
              </p>
              <div
                class="styles__1u0cyic5"
              >
                <button
                  aria-label="Copy"
                  class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                  type="button"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      CopyContentIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__1s4jots1"
    >
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: repeat(3, 1fr); --ivy5ld1: repeat(3, 1fr); --ivy5ld2: repeat(3, 1fr); --ivy5ld3: repeat(3, 1fr); --ivy5ld4: repeat(3, 1fr); --ivy5ld5: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: 2fr 1fr; --ivy5ld1: 2fr 1fr; --ivy5ld2: 2fr 1fr; --ivy5ld3: 2fr 1fr; --ivy5ld4: 2fr 1fr; --ivy5ld5: 2fr 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell with more text
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: 1fr; --ivy5ld1: 1fr; --ivy5ld2: 1fr; --ivy5ld3: 1fr; --ivy5ld4: 1fr; --ivy5ld5: 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: repeat(3, 1fr); --ivy5ld1: repeat(3, 1fr); --ivy5ld2: repeat(3, 1fr); --ivy5ld3: repeat(3, 1fr); --ivy5ld4: repeat(3, 1fr); --ivy5ld5: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with multiLine 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__1s4jots1"
    >
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: repeat(3, 1fr); --ivy5ld1: repeat(3, 1fr); --ivy5ld2: repeat(3, 1fr); --ivy5ld3: repeat(3, 1fr); --ivy5ld4: repeat(3, 1fr); --ivy5ld5: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: 2fr 1fr; --ivy5ld1: 2fr 1fr; --ivy5ld2: 2fr 1fr; --ivy5ld3: 2fr 1fr; --ivy5ld4: 2fr 1fr; --ivy5ld5: 2fr 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell with more text
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: 1fr; --ivy5ld1: 1fr; --ivy5ld2: 1fr; --ivy5ld3: 1fr; --ivy5ld4: 1fr; --ivy5ld5: 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: repeat(3, 1fr); --ivy5ld1: repeat(3, 1fr); --ivy5ld2: repeat(3, 1fr); --ivy5ld3: repeat(3, 1fr); --ivy5ld4: repeat(3, 1fr); --ivy5ld5: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with width 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__1s4jots1"
    >
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: repeat(3, 1fr); --ivy5ld1: repeat(3, 1fr); --ivy5ld2: repeat(3, 1fr); --ivy5ld3: repeat(3, 1fr); --ivy5ld4: repeat(3, 1fr); --ivy5ld5: repeat(3, 1fr); --_1s4jots0: 30%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: 2fr 1fr; --ivy5ld1: 2fr 1fr; --ivy5ld2: 2fr 1fr; --ivy5ld3: 2fr 1fr; --ivy5ld4: 2fr 1fr; --ivy5ld5: 2fr 1fr; --_1s4jots0: 30%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell with more text
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: 1fr; --ivy5ld1: 1fr; --ivy5ld2: 1fr; --ivy5ld3: 1fr; --ivy5ld4: 1fr; --ivy5ld5: 1fr; --_1s4jots0: 30%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
        style="--ivy5ld0: repeat(3, 1fr); --ivy5ld1: repeat(3, 1fr); --ivy5ld2: repeat(3, 1fr); --ivy5ld3: repeat(3, 1fr); --ivy5ld4: repeat(3, 1fr); --ivy5ld5: repeat(3, 1fr); --_1s4jots0: 30%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          style="--_1o893js0: 100%; --_1o893js2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            cell
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;
